# neds_sdr_scanner_app

./: .env.example  .gitignore  README.md  commands  config.yaml  pyproject.toml  requirements.txt  test_process.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_SPEC.md  UI_FLOW.md
neds_sdr/: __main__.py  neds_sdr.py
neds_sdr/config/: config.yaml
neds_sdr/core/: audio_output.py  channel.py  channels_manager.py  config_manager.py  device_manager copy.py  device_manager.py  event_bus.py  logger.py  receiver copy.py  receiver.py  rtl_tcp_client.py  sink_manager.py  squelch.py  tone_detector.py
neds_sdr/dsp/: fm_demod.py
neds_sdr/ui/: __init__.py  app.py  startup.py
neds_sdr/ui/tabs/: log_tab.py  sdr_tab.py  sink_tab.py  system_tab.py  tcp_tab.py
scripts/: run_dev.sh  setup_env.sh  start_tcp_servers.sh
