[tool.poetry]
name = "neds-sdr"
version = "0.1.0"
description = "A Python-based control application for Software-Defined Radio."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"